introduce estimating test-coverage with CodeClimate

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,17 @@ python:
 
 install:
   - pip install -r requirements.txt
-#   - pip install coveralls
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 
 script:
   - python -m unittest
-#   - coverage run --source=hoge_test setup.py test
 
-# after_success:
-#   - coveralls
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 # notifications:
 #   slack:
