modify .travis.yml for codeclimate-coverage (#7)
* introduce travis CI

* correct file name of 'requirements.txt'

* update README.md about travis CI

* introduce CodeClimate

* introduce estimating test-coverage with CodeClimate

* add missing information for estimating coverage with CodeClimate

* Update README.md

* add setup.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
 
 install:
   - pip install -r requirements.txt
+  - pip install coverage
 
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
@@ -17,7 +18,7 @@ before_script:
   - ./cc-test-reporter before-build
 
 script:
-  - python -m unittest
+  - coverage run --source . --omit='*/tests/*' -m unittest discover
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
